fixed delete flicker

--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,16 @@ text-transform: uppercase;
 	margin: 0 auto;
 }
 
+.description-edit {
+	outline: none;
+	background: var(--bookmark);
+	font-family: 'Roboto Mono', monospace;
+	font-size: 16px;
+	font-weight: 400;
+	text-align: center;
+	border: none;
+}
+
 .add-new-button,
 #filter-dropdown,
 .add-new-bookmark-button,
